--- a/src/app/components/portfolio/portfolio.scss
+++ b/src/app/components/portfolio/portfolio.scss
@@ -44,7 +44,6 @@
   font-size: 68px;
   font-weight: 900;
   color: #FFFFFF;
-  white-space: nowrap;
 }
 
 .portfolio-intro {
