--- a/src/app/pages/privacy-policy/privacy-policy.scss
+++ b/src/app/pages/privacy-policy/privacy-policy.scss
@@ -20,7 +20,6 @@ h1, h2 {
 h1 {
   font-size: 48px;
   margin: 0;
-  white-space: nowrap;
   color: #70E61C;
 }
 
